--- a/configs/SOTR/Base-SOTR.yaml
+++ b/configs/SOTR/Base-SOTR.yaml
@@ -18,8 +18,7 @@ SOLVER:
   STEPS: (60000, 80000)
   MAX_ITER: 90000
 INPUT:
-  MIN_SIZE_TRAIN: (640, 672, 704, 736, 768, 800, 1024)
-  MAX_SIZE_TRAIN: 2048
+  MIN_SIZE_TRAIN: (640, 672, 704, 736, 768, 800)
   MIN_SIZE_TEST: 800
   MASK_FORMAT: "bitmask"
 VERSION: 2
